--- a/Arqui 2/Taller 5/README
+++ b/Arqui 2/Taller 5/README
@@ -3,3 +3,5 @@ Conetex Selected to work together
 Device: Physical devices supporting OpenCL
 Host: Client calling code (you)
 Kernel: Blueprint of the function which does the work
+
+gcc -o foo_exe foo_src.c -lOpenCL
